@@ -1,10 +1,11 @@
 Version: $Id$ $Name$
 
-purple (09/18/05)
+purple (09/21/05)
 + Fixed item links in the terminal and message window so they match correctly
 	based on the new item link format (thanks to ksmith and EQItems for
 	all their great open info about items in EQ and being very on the ball
 	with the last patch)
++ New races from .exe
 
 purple (09/17/05)
 -------------------
